--- a/css/site.css
+++ b/css/site.css
@@ -654,8 +654,9 @@ a:hover{
     transition:all .4s ease-in-out .6s;
     width:100%;
     margin-left:-30%;
-    margin-bottom:50px;
-    max-width:600px
+    margin-bottom:20px;
+    max-width:600px;
+    margin-top:-120px
 }
 
 /* Responsive adjustments for titles in generic sections */
@@ -1416,7 +1417,8 @@ a.cookie__info{
 @media (max-width:767px){
     .header__menu .container{
         top:0;
-        transform:translateY(0)
+        transform:translateY(0);
+        margin-top: 30px;
     }
 }
 
@@ -1553,7 +1555,8 @@ a.cookie__info{
 @media (max-width:767px){
     .header__menu__right{
         align-self:flex-start;
-        text-align:left
+        text-align:left;
+        margin-top: 50px;
     }
 }
 
@@ -1901,7 +1904,7 @@ a.cookie__info{
 }
 @media (max-width:767px){
     .slide__container{
-        height:100%;
+        height:95%;
         width:90%
     }
 }
