--- a/css/site.css
+++ b/css/site.css
@@ -662,7 +662,8 @@ a:hover{
 /* Responsive adjustments for titles in generic sections */
 @media (max-width:992px){
     .section__generic__title{
-        margin-bottom:35px
+        margin-bottom:65px;
+        color: #272727;
     }
 }
 @media (max-width:767px){
